<resources>
    <string name="app_name">HerbsPedia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome_title">Welcome</string>
    <string name="username">Username</string>
    <string name="find_title">Find Your Plant Herbs\nHere!</string>
    <string name="search_title">Search Here</string>
    <string name="category_title">Plant Category</string>
    <string name="category_title_name1">Root Plants</string>
    <string name="category_title_name2">Leaf Plants</string>
    <string name="category_title_name3">Stem Plants</string>

    <string name="register_title">Create\n Account</string>
    <string name="register_name">Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="btn_register">Register</string>
    <string name="already_have_Account">Already have an Account?</string>
    <string name="to_login_title">Login</string>
    <string name="hint_name">Enter Name</string>

    <string name="login_title">Hi, \n Please Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="remember_password">Dont Remember Password? Recovery it</string>
    <string name="not_have_account">Not have an account?</string>
    <string name="to_register_title">Register Here</string>
    <string name="password_marked">***</string>
    <string name="logout">Logout</string>

    <string name="preview_foto">Preview Foto</string>
    <string name="back_button">Kembali</string>
    <string name="help_button">Bantuan</string>
    <string name="preview_image">Gambar Preview</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>

    <string name="title_scan">Scan Tanaman Disini</string>
    <string name="predict">Predict</string>
    <string name="prediction">Prediction</string>
    <string name="show_result">Show Result</string>

<!--    <string name="title_menu_1">Kurikulum Standar Industri Global</string>-->
<!--    <string name="title_menu_2">Belajar Fleksibel Sesuai Jadwal Anda</string>-->
<!--    <string name="title_menu_3">Code Review dari Developer Expert</string>-->
<!--    <string name="title_menu_4">Alumni Terpercaya di Berbagai Perusahaan</string>-->
<!--    <string name="desc_menu_1">Kurikulum dikembangkan bersama perusahaan dan pemilik teknologi dunia sesuai kebutuhan industri terkini.</string>-->
<!--    <string name="desc_menu_2">Belajar kapan pun, di mana pun, secara mandiri. Bebas memilih kelas sesuai minat belajar. Akses seumur hidup ke kelas dan forum diskusi setelah lulus.</string>-->
<!--    <string name="desc_menu_3">Validasi skill Anda melalui 1-on-1 Professional Code Review yang diberikan langsung oleh Developer Expert.</string>-->
<!--    <string name="desc_menu_4">Sertifikat yang membuktikan pengetahuan fundamental beserta keterampilan nyata yang diinginkan perusahaan global.</string>-->
<!--    <string name="learn_now">Belajar Sekarang</string>-->

    <string name="title_menu_1">Welcome to HerbsPedia\n Temukan Tanaman Herbal dengan Mudah</string>
    <string name="desc_menu_1">Gunakan kamera atau galeri Anda untuk mendeteksi dan mengidentifikasi berbagai jenis tanaman herbal dengan cepat dan akurat.</string>
    <string name="title_menu_2">Pelajari Manfaat Tanaman Herbal</string>
    <string name="desc_menu_2">Dapatkan informasi lengkap tentang deskripsi tanaman, manfaat kesehatan, penggunaan tradisional, dan cara pengolahan berbagai tanaman herbal. </string>
    <string name="title_menu_3">Panduan Praktis Penggunaan Herbal</string>
    <string name="desc_menu_3">Dapatkan tips dan resep praktis untuk memanfaatkan tanaman herbal dalam kehidupan sehari-hari..</string>
    <string name="title_menu_4">Konsultasi dengan HerbsPedia Bot</string>
    <string name="desc_menu_4">Gunakan fitur HerbsPedia Bot untuk mendapatkan jawaban cepat dan akurat tentang berbagai tanaman herbal dan kegunaannya.</string>
    <string name="learn_now">Login Sekarang</string>


</resources>