<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageViewLogin"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:contentDescription="GambarLogin"
        android:src="@drawable/top_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/login_title"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        style="@style/TextView.PoppinsNormal14sp8D92A3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogin"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tv_email_login"
            style="@style/TextView.PoppinsNormal13sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_email"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColorHint="@color/focused_color"
            app:boxStrokeColor="@color/focused_color"
            app:startIconDrawable="@drawable/ic_email">

            <id.zamzam.herbspedia.ui.CustomEmailEditText
                android:id="@+id/edt_email_login"
                style="@style/EditText.PoppinsNormal14sp8D92A3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_password_login"
            style="@style/TextView.PoppinsNormal13sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_password"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColorHint="@color/focused_color"
            app:boxStrokeColor="@color/focused_color"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock">

            <id.zamzam.herbspedia.ui.CustomPasswordEditText
                android:id="@+id/edtPasswordLogin"
                style="@style/EditText.PoppinsNormal14sp8D92A3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textPassword"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_bg"
            android:text="@string/btn_login" />

        <TextView
            style="@style/TextView.PoppinsNormal13sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/not_have_account"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_to_register"
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/to_register_title"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>