<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondaryColor"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextView.PoppinsNormal14sp8D92A3"
                        android:text="@string/welcome_title"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvHello"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextView.PoppinsNormal14sp8D92A3"
                        android:text="@string/username"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView10" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_notif"
                        app:layout_constraintBottom_toBottomOf="@+id/tvHello"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView10" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_title"
                    style="@style/TextView.PoppinsNormal14sp8D92A3"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="30dp"
                    android:layout_marginStart="32dp"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/etQuery2"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="32sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/edittext_bg"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/search_title"
                    android:textSize="18sp"
                    android:inputType="text"
                    android:padding="16dp"
                    android:textColorHint="@color/secondaryColor" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/arc_3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingConstraints">

                    <ViewFlipper
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:autoStart="true"
                        android:flipInterval="5000"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        android:inAnimation="@anim/slide_in_left">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/cover"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/tanaman"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/tanaman2"/>
                    </ViewFlipper>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:textColor="#415D43"
                    android:textSize="20sp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="32dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/TextView.PoppinsNormal14sp8D92A3"
                    android:text="@string/category_title" />

                <HorizontalScrollView
                    android:id="@+id/rnkqqrcony6"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginBottom="21dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:fillViewport="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/item_plant"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_title"
                            app:cardCornerRadius="10dp"
                            android:elevation="8dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/iv_1"
                                    android:layout_width="match_parent"
                                    android:layout_height="122dp"
                                    android:layout_margin="5dp"
                                    android:scaleType="fitXY"
                                    app:shapeAppearanceOverlay="@style/cr6"
                                    android:src="@drawable/tanaman_akar2" />

                                <TextView
                                    android:id="@+id/tv_title1"
                                    style="@style/TextView.PoppinsNormal14sp8D92A3"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:layout_marginEnd="5dp"
                                    android:layout_marginBottom="8dp"
                                    android:text="@string/category_title_name1"
                                    android:textColor="#2E5731"
                                    android:textSize="16sp" />
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/item_plant2"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_title"
                            android:layout_marginStart="10dp"
                            app:cardCornerRadius="10dp"
                            android:elevation="8dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <com.google.android.material.imageview.ShapeableImageView
                                    android:id="@+id/iv_2"
                                    android:layout_width="match_parent"
                                    android:layout_height="122dp"
                                    android:layout_margin="5dp"
                                    android:scaleType="fitXY"
                                    app:shapeAppearanceOverlay="@style/cr6"
                                    android:src="@drawable/tanaman_daun2" />

                                <TextView
                                    android:id="@+id/tv_title2"
                                    style="@style/TextView.PoppinsNormal14sp8D92A3"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:layout_marginEnd="5dp"
                                    android:layout_marginBottom="8dp"
                                    android:text="@string/category_title_name2"
                                    android:textColor="#2E5731"
                                    android:textSize="16sp" />
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/item_plant3"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_title"
                            android:layout_marginStart="10dp"
                            app:cardCornerRadius="10dp"
                            android:elevation="8dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <com.google.android.material.imageview.ShapeableImageView
                                    android:id="@+id/iv_3"
                                    android:layout_width="match_parent"
                                    android:layout_height="122dp"
                                    android:layout_margin="5dp"
                                    android:scaleType="fitXY"
                                    app:shapeAppearanceOverlay="@style/cr6"
                                    android:src="@drawable/tanaman_batang2" />

                                <TextView
                                    android:id="@+id/tv_title3"
                                    style="@style/TextView.PoppinsNormal14sp8D92A3"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:layout_marginEnd="5dp"
                                    android:layout_marginBottom="8dp"
                                    android:text="@string/category_title_name3"
                                    android:textColor="#2E5731"
                                    android:textSize="16sp" />
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
